# Memorable

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Memory/: CMakeLists.txt  EmbeddedType.h  Embeddor.h  Package.cpp  Package.h  XREmbeddor.h
tests/: CMakeLists.txt  packageTest.cpp  test.cpp
